--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,46 +15,49 @@
     "api": "node ./tools/openapi-gen/bin/index.js --input $npm_package_config_backend/openapi.json --output src/plugins/api/api-backend --name BackendClient --client axios --indent 2 --useOptions --exportModels true --exportServices true --exportSchemas true --exportCore false --corePathTop @/plugins/api/core --corePathDeep @/plugins/api/core"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@d3fc/d3fc-webgl": "^3.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/router": "^9.3.0",
-    "apache-arrow": "^9.0.0",
-    "axios": "^1.1.2",
-    "bootstrap": "^5.2.1",
-    "bootstrap-icons": "^1.9.1",
-    "d3": "^7.6.1",
+    "@vueuse/core": "^9.10.0",
+    "@vueuse/router": "^9.10.0",
+    "apache-arrow": "^10.0.1",
+    "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "d3": "^7.0.1",
     "d3-selection": "^3.0.0",
-    "pinia": "^2.0.23",
-    "three": "^0.145.0",
-    "vue": "^3.2.40",
-    "vue-router": "^4.1.5"
+    "d3-svg-annotation": "^2.5.1",
+    "d3fc": "^15.2.6",
+    "pinia": "^2.0.28",
+    "three": "^0.148.0",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/d3": "^7.4.0",
-    "@types/d3-selection": "^3.0.3",
-    "@types/node": "^18.7.16",
-    "@types/three": "^0.144.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@types/d3-selection": "^3.0.4",
+    "@types/node": "^18.11.18",
+    "@types/three": "^0.148.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "8.22.0",
+    "eslint": "^8.31.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "eslint-plugin-vuejs-accessibility": "^1.2.0",
-    "fs-extra": "^10.1.0",
+    "eslint-plugin-vue": "^9.8.0",
+    "eslint-plugin-vuejs-accessibility": "^2.0.0",
+    "fs-extra": "^11.1.0",
     "json-schema-ref-parser": "^9.0.9",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.8",
-    "vite-plugin-glsl": "^0.5.1",
-    "vue-tsc": "^1.0.7"
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vite-plugin-glsl": "^1.0.2",
+    "vue-tsc": "^1.0.22"
   }
 }
