--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.82.0
-pydantic[dotenv]==1.10.2
-uvicorn==0.18.3
+fastapi==0.89.0
+pydantic[dotenv]==1.10.4
+uvicorn==0.20.0
 hypercorn==0.14.3
 aiofiles==22.1.0
 toml==0.10.2
-pyarrow==9.0.0
-numpy==1.23.3
-pandas==1.5.0
+pyarrow==10.0.1
+numpy==1.24.1
+pandas==1.5.2
+typer[all]==0.7.0
+msgpack==1.0.4
