--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --ignore-pattern tools/*",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -23,10 +26,22 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.7.2",
     "@types/d3-scale": "^4.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-airbnb-with-typescript": "^8.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.4",
+    "@vue/tsconfig": "^0.5.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vue-tsc": "^1.8.27"
+    "prettier": "^3.2.5",
+    "vue-tsc": "^1.8.27",
+    "eslint": "^8.56.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.22.0",
+    "eslint-plugin-vuejs-accessibility": "^2.2.1"
   }
 }
