--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@duckdb/duckdb-wasm": "^1.28.1-dev106.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "apache-arrow": "^15.0.0",
     "bootstrap": "^5.3.3",
     "d3-scale": "^4.0.2",
     "falcon-vis": "^0.17.4",
     "pinia": "^2.1.7",
     "regl-scatterplot": "^1.8.5",
+    "sass": "^1.72.0",
     "vega": "^5.28.0",
     "vega-embed": "^6.24.0",
     "vega-lite": "^5.16.3",
@@ -34,14 +39,14 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "prettier": "^3.2.5",
-    "vue-tsc": "^1.8.27",
     "eslint": "^8.56.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.22.0",
-    "eslint-plugin-vuejs-accessibility": "^2.2.1"
+    "eslint-plugin-vuejs-accessibility": "^2.2.1",
+    "prettier": "^3.2.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "vue-tsc": "^1.8.27"
   }
 }
