--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,20 +19,26 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "apache-arrow": "^15.0.0",
     "bootstrap": "^5.3.3",
+    "d3-color-legend": "^1.4.1",
+    "d3-geomap": "^3.3.0",
     "d3-scale": "^4.0.2",
     "falcon-vis": "^0.17.4",
     "pinia": "^2.1.7",
     "regl-scatterplot": "^1.8.5",
     "sass": "^1.72.0",
+    "topojson": "^3.0.2",
     "vega": "^5.28.0",
     "vega-embed": "^6.24.0",
     "vega-lite": "^5.16.3",
+    "vega-lite-api": "^5.6.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.7.2",
+    "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.8",
+    "@types/topojson": "^3.2.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-airbnb-with-typescript": "^8.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
