--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@types/d3-hexbin": "^0.2.5",
+    "@types/robust-point-in-polygon": "^1.0.4",
     "apache-arrow": "^15.0.0",
     "bootstrap": "^5.3.3",
     "d3-color-legend": "^1.4.1",
     "d3-geomap": "^3.3.0",
+    "d3-hexbin": "^0.2.2",
     "d3-scale": "^4.0.2",
     "falcon-vis": "^0.17.4",
     "pinia": "^2.1.7",
     "regl-scatterplot": "^1.8.5",
+    "robust-point-in-polygon": "^1.0.3",
     "sass": "^1.72.0",
     "topojson": "^3.0.2",
     "vega": "^5.28.0",
