--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 stages:
   - build
-  - test
+#  - test
   - deploy
 
 cache:
@@ -34,17 +34,17 @@ build-job:
       - frontend/dist/
     expire_in: 24 hours
 
-test-lint:
-  stage: test
-  script:
-    - cd frontend
-    - npm run lint
-
-test-typing:
-  stage: test
-  script:
-    - cd frontend
-    - npm run type-check
+#test-lint:
+#  stage: test
+#  script:
+#    - cd frontend
+#    - npm run lint
+#
+#test-typing:
+#  stage: test
+#  script:
+#    - cd frontend
+#    - npm run type-check
 
 .deployment:
   stage: deploy
@@ -72,7 +72,8 @@ deploy-frontend:
     - ls -lisah
     - cd frontend/
     - rm -r dist/
-    - curl --location --output artifacts.zip "https://gitlab.pik-potsdam.de/api/v4/projects/1/jobs/artifacts/main/download?job=test&job_token=$CI_JOB_TOKEN"
+    - ls -lisah
+    - 'curl --location --output artifacts.zip --header "JOB-TOKEN: $CI_JOB_TOKEN" "https://gitlab.example.com/api/v4/projects/$CI_PROJECT_ID/jobs/artifacts/main/download?job=test"'
     - unzip -d dist artifacts.zip
     - rm artifacts.zip
     - sudo chown -R lithub:lithub $LITHUB_LOCAL_PATH
