--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
   LITHUB_LOCAL_PATH: "/var/www/lithub/literature-hub"
 
 stages:
-  - build
+#  - build
 #  - test
   - deploy
 
@@ -19,20 +19,20 @@ cache:
     - backend/.cache/pip/
     - frontend/node_modules/
 
-build-job:
-  stage: build
-  script:
-    - echo "Building frontend"
-    - echo $VITE_LITHUB_API_URL
-    - echo $VITE_LITHUB_DATA_URL
-    - echo $VITE_LITHUB_BASE
-    - cd frontend
-    - npm install
-    - npm run build-only
-  artifacts:
-    paths:
-      - frontend/dist/
-    expire_in: 24 hours
+#build-job:
+#  stage: build
+#  script:
+#    - echo "Building frontend"
+#    - echo $VITE_LITHUB_API_URL
+#    - echo $VITE_LITHUB_DATA_URL
+#    - echo $VITE_LITHUB_BASE
+#    - cd frontend
+#    - npm install
+#    - npm run build-only
+#  artifacts:
+#    paths:
+#      - frontend/dist/
+#    expire_in: 24 hours
 
 #test-lint:
 #  stage: test
