--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,28 +19,34 @@ cache:
     - backend/.cache/pip/
     - frontend/node_modules/
 
-#build-job:
-#  stage: build
-#  script:
-#    - echo "Building frontend"
-#    - echo $VITE_LITHUB_API_URL
-#    - echo $VITE_LITHUB_DATA_URL
-#    - echo $VITE_LITHUB_BASE
-#    - cd frontend
-#    - npm install
-#    - npm run build-only
-#  artifacts:
-#    paths:
-#      - frontend/dist/
-#    expire_in: 24 hours
+build-job:
+  tags:
+    - lithub
+  stage: build
+  script:
+    - echo "Building frontend"
+    - echo $VITE_LITHUB_API_URL
+    - echo $VITE_LITHUB_DATA_URL
+    - echo $VITE_LITHUB_BASE
+    - cd frontend
+    - npm install
+    - npm run build-only
+  artifacts:
+    paths:
+      - frontend/dist/
+    expire_in: 24 hours
 
 #test-lint:
+#  tags:
+#    - lithub
 #  stage: test
 #  script:
 #    - cd frontend
 #    - npm run lint
 #
 #test-typing:
+#  tags:
+#    - lithub
 #  stage: test
 #  script:
 #    - cd frontend
@@ -49,7 +55,6 @@ cache:
 .deployment:
   stage: deploy
   tags:
-    - lithub
     - metal
   when: manual
   script:
@@ -71,9 +76,12 @@ deploy-frontend:
     - sudo chown -R gitlab-runner:gitlab-runner $LITHUB_LOCAL_PATH
     - ls -lisah
     - cd frontend/
-    - rm -rf dist/
+    - rm -rf dist/*
     - ls -lisah
+    - echo $CI_JOB_TOKEN
+    - echo $CI_PROJECT_ID
     - 'curl --location --output artifacts.zip --header "JOB-TOKEN: $CI_JOB_TOKEN" "https://gitlab.pik-potsdam.de/api/v4/projects/$CI_PROJECT_ID/jobs/artifacts/main/download?job=build"'
+    - cat art
     - unzip -d dist artifacts.zip
     - rm artifacts.zip
     - sudo chown -R lithub:lithub $LITHUB_LOCAL_PATH
