--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ deploy-frontend:
     - sudo chown -R gitlab-runner:gitlab-runner $LITHUB_LOCAL_PATH
     - ls -lisah
     - cd frontend/
+    - ls -lisah
     - rm -rf dist/*
     - ls -lisah
     - echo $CI_JOB_TOKEN
