add histogram back in

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,16 +26,18 @@
     "d3-geomap": "^3.3.0",
     "d3-hexbin": "^0.2.2",
     "d3-scale": "^4.0.2",
-    "falcon-vis": "^0.17.4",
+    "d3-brush": "^3.0.0",
+    "d3-zoom": "^3.0.0",
+    "d3-array": "^3.2.4",
+    "d3-interpolate": "^3.0.1",
+    "d3-axis": "^3.0.0",
+    "d3-selection": "^3.0.0",
+    "d3-scale-chromatic": "^3.1.0",
     "pinia": "^2.1.7",
     "regl-scatterplot": "^1.8.5",
     "robust-point-in-polygon": "^1.0.3",
     "sass": "^1.72.0",
     "topojson": "^3.0.2",
-    "vega": "^5.28.0",
-    "vega-embed": "^6.24.0",
-    "vega-lite": "^5.16.3",
-    "vega-lite-api": "^5.6.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
@@ -55,6 +57,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.22.0",
     "eslint-plugin-vuejs-accessibility": "^2.2.1",
+    "npm-check-updates": "^16.14.20",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
