refactoring to hierarchical groups, add healthmap

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,18 +21,21 @@
     "@types/robust-point-in-polygon": "^1.0.4",
     "apache-arrow": "^15.0.0",
     "bootstrap": "^5.3.3",
+    "d3-array": "^3.2.4",
+    "d3-axis": "^3.0.0",
+    "d3-brush": "^3.0.0",
     "d3-color-legend": "^1.4.1",
+    "d3-format": "^3.1.0",
     "d3-geo-projection": "^4.0.0",
     "d3-geomap": "^3.3.0",
     "d3-hexbin": "^0.2.2",
-    "d3-scale": "^4.0.2",
-    "d3-brush": "^3.0.0",
-    "d3-zoom": "^3.0.0",
-    "d3-array": "^3.2.4",
+    "d3-hierarchy": "^3.1.2",
     "d3-interpolate": "^3.0.1",
-    "d3-axis": "^3.0.0",
-    "d3-selection": "^3.0.0",
+    "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-zoom": "^3.0.0",
     "pinia": "^2.1.7",
     "regl-scatterplot": "^1.8.5",
     "robust-point-in-polygon": "^1.0.3",
@@ -42,6 +45,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.7.1",
     "@rushstack/eslint-patch": "^1.7.2",
     "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.8",
