--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,13 +34,13 @@
     "d3-selection" : "^3.0.0",
     "d3-shape" : "^3.2.0",
     "d3-zoom" : "^3.0.0",
-    "pinia" : "^2.1.7",
+    "pinia" : "^3.0.3",
     "regl-scatterplot" : "^1.14.1",
     "robust-point-in-polygon" : "^1.0.3",
     "sass" : "^1.89.2",
     "topojson" : "^3.0.2",
-    "vue" : "^3.4.19",
-    "vue-router" : "^4.3.0"
+    "vue" : "^3.5.18",
+    "vue-router" : "^4.5.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.1",
@@ -48,21 +48,21 @@
     "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.8",
     "@types/topojson": "^3.2.6",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-airbnb-with-typescript": "^8.0.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.4",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.56.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^8.57.1",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^9.22.0",
-    "eslint-plugin-vuejs-accessibility": "^2.2.1",
-    "npm-check-updates": "^16.14.20",
-    "prettier": "^3.2.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "vue-tsc": "^1.8.27"
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
+    "npm-check-updates": "^18.0.2",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "vite": "^7.0.6",
+    "vue-tsc": "^3.0.5",
+    "jiti": "^2.5.1"
   }
 }
