--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev" : "vite",
     "build" : "vue-tsc && vite build",
     "build-only" : "vite build",
-    "type-check" : "vue-tsc --noEmit -p tsconfig.json --composite false",
+    "type-check" : "node -v && vue-tsc --noEmit -p tsconfig.json --composite false",
     "lint" : "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --ignore-pattern tools/*",
     "preview" : "vite preview"
   },
