--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ exclude = []
 
 [tool.ruff.lint]
 select = ["C", "E", "F", "W", "B", "B9"]
-ignore = ["E203", "E501", "E712", "E741", "B010", "B009"]  # , "E126", "W503",
+ignore = ["E203", "E501", "E712", "E741", "B010", "B009", "B904", "C403", "C416", "E722"]  # , "E126", "W503",
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -53,7 +53,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.mccabe]
 # Flag errors (`C901`) whenever the complexity level exceeds 5.
-max-complexity = 12
+max-complexity = 15
 
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
