--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "private" : true,
   "version" : "0.0.0",
   "type" : "module",
+  "engines": {
+    "npm": "^11.6.2",
+    "node": "^v24.11.1"
+  },
   "scripts" : {
     "dev" : "vite",
     "build" : "vue-tsc && vite build",
@@ -12,20 +16,20 @@
     "preview" : "vite preview"
   },
   "dependencies" : {
-    "@fortawesome/fontawesome-svg-core" : "^7.0.0",
-    "@fortawesome/free-brands-svg-icons" : "^7.0.0",
-    "@fortawesome/free-regular-svg-icons" : "^7.0.0",
-    "@fortawesome/free-solid-svg-icons" : "^7.0.0",
-    "@fortawesome/vue-fontawesome" : "^3.1.1",
-    "apache-arrow" : "^15.0.0",
-    "bootstrap" : "^5.3.7",
+    "@fortawesome/fontawesome-svg-core" : "^7.1.0",
+    "@fortawesome/free-brands-svg-icons" : "^7.1.0",
+    "@fortawesome/free-regular-svg-icons" : "^7.1.0",
+    "@fortawesome/free-solid-svg-icons" : "^7.1.0",
+    "@fortawesome/vue-fontawesome" : "^3.1.2",
+    "apache-arrow" : "^15.0.2",
+    "bootstrap" : "^5.3.8",
     "d3-array" : "^3.2.4",
     "d3-axis" : "^3.0.0",
     "d3-brush" : "^3.0.0",
     "d3-color-legend" : "^1.4.1",
     "d3-format" : "^3.1.0",
     "d3-geo-projection" : "^4.0.0",
-    "d3-geomap" : "^3.3.0",
+    "d3-geomap" : "^4.0.0",
     "d3-hexbin" : "^0.2.2",
     "d3-hierarchy" : "^3.1.2",
     "d3-interpolate" : "^3.0.1",
@@ -34,35 +38,31 @@
     "d3-selection" : "^3.0.0",
     "d3-shape" : "^3.2.0",
     "d3-zoom" : "^3.0.0",
-    "pinia" : "^3.0.3",
+    "pinia" : "^3.0.4",
     "regl-scatterplot" : "^1.14.1",
     "robust-point-in-polygon" : "^1.0.3",
-    "sass" : "^1.89.2",
-    "topojson" : "^3.0.2",
-    "vue" : "^3.5.18",
-    "vue-router" : "^4.5.1"
+    "sass" : "^1.97.0",
+    "vue" : "^3.5.26",
+    "vue-router" : "^4.6.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.7.1",
-    "@rushstack/eslint-patch": "^1.7.2",
+    "@biomejs/biome": "^2.3.10",
+    "@rushstack/eslint-patch": "^1.15.0",
     "@types/d3": "^7.4.3",
-    "@types/d3-scale": "^4.0.8",
+    "@types/d3-scale": "^4.0.9",
     "@types/topojson": "^3.2.6",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^8.57.1",
+    "@vue/tsconfig": "^0.8.1",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-vue": "^9.2.0",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "npm-check-updates": "^18.0.2",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.2",
-    "vite": "^7.0.6",
-    "vue-tsc": "^3.0.5",
-    "jiti": "^2.5.1"
+    "npm-check-updates": "^19.2.0",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0",
+    "vue-tsc": "^3.1.8",
+    "jiti": "^2.6.1"
   }
 }
