--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,68 +1,71 @@
 {
-  "name" : "vue-ts",
-  "private" : true,
-  "version" : "0.0.0",
-  "type" : "module",
+  "name": "vue-ts",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "engines": {
     "npm": "^11.6.2",
     "node": "^v24.11.1"
   },
-  "scripts" : {
-    "dev" : "vite",
-    "build" : "vue-tsc && vite build",
-    "build-only" : "vite build",
-    "type-check" : "node -v && vue-tsc --noEmit -p tsconfig.json --composite false",
-    "lint" : "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --ignore-pattern tools/*",
-    "preview" : "vite preview"
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "build-only": "vite build",
+    "type-check": "node -v && vue-tsc --noEmit -p tsconfig.json --composite false",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "dependencies" : {
-    "@fortawesome/fontawesome-svg-core" : "^7.1.0",
-    "@fortawesome/free-brands-svg-icons" : "^7.1.0",
-    "@fortawesome/free-regular-svg-icons" : "^7.1.0",
-    "@fortawesome/free-solid-svg-icons" : "^7.1.0",
-    "@fortawesome/vue-fontawesome" : "^3.1.2",
-    "apache-arrow" : "^15.0.2",
-    "bootstrap" : "^5.3.8",
-    "d3-array" : "^3.2.4",
-    "d3-axis" : "^3.0.0",
-    "d3-brush" : "^3.0.0",
-    "d3-color-legend" : "^1.4.1",
-    "d3-format" : "^3.1.0",
-    "d3-geo-projection" : "^4.0.0",
-    "d3-geomap" : "^4.0.0",
-    "d3-hexbin" : "^0.2.2",
-    "d3-hierarchy" : "^3.1.2",
-    "d3-interpolate" : "^3.0.1",
-    "d3-scale" : "^4.0.2",
-    "d3-scale-chromatic" : "^3.1.0",
-    "d3-selection" : "^3.0.0",
-    "d3-shape" : "^3.2.0",
-    "d3-zoom" : "^3.0.0",
-    "pinia" : "^3.0.4",
-    "regl-scatterplot" : "^1.14.1",
-    "robust-point-in-polygon" : "^1.0.3",
-    "sass" : "^1.97.0",
-    "vue" : "^3.5.26",
-    "vue-router" : "^4.6.4"
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
+    "apache-arrow": "^15.0.2",
+    "bootstrap": "^5.3.8",
+    "d3-array": "^3.2.4",
+    "d3-axis": "^3.0.0",
+    "d3-brush": "^3.0.0",
+    "d3-color-legend": "^1.4.1",
+    "d3-format": "^3.1.0",
+    "d3-geo-projection": "^4.0.0",
+    "d3-geomap": "^4.0.0",
+    "d3-hexbin": "^0.2.2",
+    "d3-hierarchy": "^3.1.2",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-zoom": "^3.0.0",
+    "pinia": "^3.0.4",
+    "regl-scatterplot": "^1.14.1",
+    "robust-point-in-polygon": "^1.0.3",
+    "sass": "^1.97.0",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4",
+    "core-js" : "^3.47.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.10",
-    "@rushstack/eslint-patch": "^1.15.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
     "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.9",
     "@types/topojson": "^3.2.6",
     "@vitejs/plugin-vue": "^6.0.3",
+    "@vitejs/plugin-vue-jsx": "^5.1.2",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/language-server": "^3.1.7",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "npm-check-updates": "^19.2.0",
     "prettier": "^3.7.4",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
-    "vue-tsc": "^3.1.8",
-    "jiti": "^2.6.1"
+    "vue-tsc": "^3.1.8"
   }
 }
